<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_setting"
    android:visibility="gone"
    tools:visibility="visible"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/dp_10"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_setting_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_navigation_view_bg"
        android:elevation="@dimen/dp_10"
        android:paddingHorizontal="@dimen/dp_10"
        android:paddingTop="@dimen/dp_15"
        android:paddingBottom="@dimen/view_gaping_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvTextSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginBottom="@dimen/view_gaping_large"
            android:text="@string/text_size"
            android:textColor="?attr/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bt_divider"
            app:layout_constraintTop_toTopOf="@id/view_setting_bottom">
        </TextView>

        <SeekBar
            android:id="@+id/seek_bar_text_size"
            android:layout_width="0dp"
            style="@style/SeekBarTheme"
            android:layout_height="wrap_content"
            android:progress="50"
            app:layout_constraintBottom_toBottomOf="@id/tvTextSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvTextSize"
            app:layout_constraintTop_toTopOf="@id/tvTextSize">
        </SeekBar>

        <View
            android:id="@+id/bt_divider"
            android:layout_width="match_parent"
            android:background="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/view_gaping_large"
            app:layout_constraintBottom_toTopOf="@id/bt_save"
            android:layout_height="@dimen/dp_1">

        </View>

        <Button
            android:id="@+id/bt_save"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded"
            android:elevation="@dimen/dp_10"
            android:padding="2dp"
            android:scaleType="center"
            android:text="@string/bt_title_okey"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/bt_cancel"
            app:layout_constraintTop_toTopOf="@id/bt_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5">
        </Button>

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_negative"
            android:elevation="@dimen/dp_10"
            android:padding="2dp"
            android:scaleType="center"
            android:text="@string/bt_title_cancel"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/view_setting_bottom"
            app:layout_constraintEnd_toStartOf="@+id/bt_save"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/bt_cancel"
            app:layout_constraintStart_toStartOf="parent">
        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>